@@ -2,37 +2,36 @@ package com.example.sneaker_store.service.impl;
 
 import com.example.sneaker_store.dto.ProductAiDto;
 import com.example.sneaker_store.model.UserEntity;
+import com.example.sneaker_store.service.ChatService;
 import com.example.sneaker_store.service.UserService;
 import com.example.sneaker_store.util.exception.user.IdInvalidException;
-import org.apache.poi.ss.usermodel.*;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.Row;
+import org.apache.poi.ss.usermodel.Sheet;
+import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor;
 import org.springframework.ai.chat.memory.ChatMemory;
 import org.springframework.ai.chat.memory.MessageWindowChatMemory;
 import org.springframework.ai.chat.memory.repository.jdbc.JdbcChatMemoryRepository;
-import org.springframework.ai.chat.messages.SystemMessage;
-import org.springframework.ai.chat.messages.UserMessage;
-import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
-
-import com.example.sneaker_store.service.ChatService;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j(topic = "CHAT-SERVICE")
 public class ChatServiceImpl implements ChatService {
+
+    private static final String FALLBACK_ANSWER = "Xin loi, minh chua biet cau tra loi cho cau hoi nay.";
 
     private final ChatClient chatClient;
     private final UserService userService;
@@ -65,7 +64,7 @@ public class ChatServiceImpl implements ChatService {
     public String chat(String message) {
         String excelAnswer = excelFallback(message);
 
-        if (!excelAnswer.equals("Xin lỗi, mình chưa biết câu trả lời cho câu hỏi này.")) {
+        if (!excelAnswer.equals(FALLBACK_ANSWER)) {
             return excelAnswer;
         }
 
@@ -83,9 +82,25 @@ public class ChatServiceImpl implements ChatService {
                     .content();
 
         } catch (Exception e) {
-            log.error("Chat AI error", e);
-            return "Xin lỗi, hệ thống AI đang lỗi. Bạn vui lòng thử lại sau.";
+            log.warn("Chat AI unavailable: {}", summarizeAiError(e));
+            return buildLocalFallbackAnswer(products);
         }
+    }
+
+    private String summarizeAiError(Exception e) {
+        String message = e.getMessage();
+        if (message == null || message.isBlank()) {
+            return e.getClass().getSimpleName();
+        }
+
+        int bodyStartIndex = message.indexOf(" - [");
+        if (bodyStartIndex > 0) {
+            return message.substring(0, bodyStartIndex);
+        }
+
+        return message.lines()
+                .findFirst()
+                .orElse(e.getClass().getSimpleName());
     }
 
     private String getConversationId() {
@@ -95,18 +110,18 @@ public class ChatServiceImpl implements ChatService {
             UserEntity user = this.userService.findByEmail(email);
 
             if (user == null) {
-                throw new IdInvalidException("Người dùng không tồn tại!");
+                throw new IdInvalidException("Nguoi dung khong ton tai!");
             }
 
-            return "conversation-" + user.getId();
+            return user.getId();
         }
 
-        return "conversation-guest";
+        return "guest";
     }
 
     private List<ProductAiDto> searchProducts(String message) {
         String[] keywords = message.toLowerCase()
-                .replaceAll("[^a-zA-Z0-9À-ỹ\\s]", "")
+                .replaceAll("[^\\p{L}\\p{N}\\s]", "")
                 .split("\\s+");
 
         StringBuilder where = new StringBuilder(" WHERE 1 = 1 ");
@@ -117,49 +132,50 @@ public class ChatServiceImpl implements ChatService {
         for (String keyword : keywords) {
             if (keyword.isBlank()) continue;
 
-            where.append("""
-            AND (
-                LOWER(p.name) LIKE :kw%s
-                OR LOWER(p.description) LIKE :kw%s
-                OR LOWER(c.name) LIKE :kw%s
-                OR LOWER(cp.name) LIKE :kw%s
-                OR LOWER(pv.color) LIKE :kw%s
-            )
-            """.formatted(index, index, index, index, index));
+            where.append(String.format(
+                    "AND (" +
+                            "LOWER(p.name) LIKE :kw%s " +
+                            "OR LOWER(p.description) LIKE :kw%s " +
+                            "OR LOWER(c.name) LIKE :kw%s " +
+                            "OR LOWER(cp.name) LIKE :kw%s " +
+                            "OR LOWER(pv.color) LIKE :kw%s" +
+                            ") ",
+                    index, index, index, index, index
+            ));
 
             params.addValue("kw" + index, "%" + keyword + "%");
             index++;
         }
 
-        String sql = """
-        SELECT
-            p.id AS product_id,
-            p.name AS product_name,
-            p.price,
-            p.slug,
-            p.description,
-            c.name AS category_name,
-            cp.name AS parent_category_name,
-            MIN(pv.color) AS color,
-            MIN(pi.imageurl) AS image_url
-        FROM tbl_product p
-        JOIN tbl_category c ON c.id = p.category_id
-        LEFT JOIN tbl_category cp ON cp.id = c.parent_id
-        LEFT JOIN tbl_product_variant pv ON pv.product_id = p.id
-        LEFT JOIN tbl_product_image pi
-            ON pi.variant_id = pv.id
-            AND pi.is_main = true
-        """ + where + """
-        GROUP BY
-            p.id,
-            p.name,
-            p.price,
-            p.slug,
-            p.description,
-            c.name,
-            cp.name
-        LIMIT 10
-        """;
+        String sql = sql(
+                "SELECT",
+                "p.id AS product_id,",
+                "p.name AS product_name,",
+                "p.price,",
+                "p.slug,",
+                "p.description,",
+                "c.name AS category_name,",
+                "cp.name AS parent_category_name,",
+                "MIN(pv.color) AS color,",
+                "MIN(pi.imageurl) AS image_url",
+                "FROM tbl_product p",
+                "JOIN tbl_category c ON c.id = p.category_id",
+                "LEFT JOIN tbl_category cp ON cp.id = c.parent_id",
+                "LEFT JOIN tbl_product_variant pv ON pv.product_id = p.id",
+                "LEFT JOIN tbl_product_image pi",
+                "ON pi.variant_id = pv.id",
+                "AND pi.is_main = true",
+                where.toString(),
+                "GROUP BY",
+                "p.id,",
+                "p.name,",
+                "p.price,",
+                "p.slug,",
+                "p.description,",
+                "c.name,",
+                "cp.name",
+                "LIMIT 10"
+        );
 
         return namedParameterJdbcTemplate.query(sql, params, (rs, rowNum) -> {
             ProductAiDto dto = new ProductAiDto();
@@ -178,20 +194,19 @@ public class ChatServiceImpl implements ChatService {
 
     private String buildProductContext(List<ProductAiDto> products) {
         if (products.isEmpty()) {
-            return "Không tìm thấy sản phẩm phù hợp trong database.";
+            return "No matching products were found in the database.";
         }
 
         return products.stream()
-                .map(p -> """
-                    - Tên: %s
-                      Giá: %.0f
-                      Slug: %s
-                      Danh mục: %s
-                      Loại: %s
-                      Màu: %s
-                      Ảnh: %s
-                      Mô tả: %s
-                    """.formatted(
+                .map(p -> String.format(
+                        "- Name: %s%n" +
+                                "  Price: %.0f%n" +
+                                "  Slug: %s%n" +
+                                "  Category: %s%n" +
+                                "  Type: %s%n" +
+                                "  Color: %s%n" +
+                                "  Image: %s%n" +
+                                "  Description: %s%n",
                         p.getProductName(),
                         p.getPrice(),
                         p.getSlug(),
@@ -204,33 +219,49 @@ public class ChatServiceImpl implements ChatService {
                 .collect(Collectors.joining("\n"));
     }
 
+    private String buildLocalFallbackAnswer(List<ProductAiDto> products) {
+        if (products.isEmpty()) {
+            return "Xin loi, he thong AI dang loi va minh chua tim thay san pham phu hop trong cua hang.";
+        }
+
+        String productLines = products.stream()
+                .limit(3)
+                .map(product -> String.format(
+                        "- %s: %.0f VND, slug: %s",
+                        product.getProductName(),
+                        product.getPrice(),
+                        product.getSlug()
+                ))
+                .collect(Collectors.joining("\n"));
+
+        return "He thong AI dang tam thoi loi, nhung minh tim thay mot so san pham co the phu hop:\n" + productLines;
+    }
+
     private String buildSystemPrompt(String productContext) {
-        return """
-            Bạn là trợ lý tư vấn của Sneaker Store.
-
-            Quy tắc:
-            - Chỉ tư vấn dựa trên dữ liệu sản phẩm bên dưới.
-            - Không tự bịa sản phẩm, giá, màu, size.
-            - Nếu không có sản phẩm phù hợp, hãy nói chưa tìm thấy sản phẩm phù hợp.
-            - Nếu khách hỏi đăng nhập hoặc đăng ký, hướng dẫn vào /login hoặc /register.
-            - Nếu khách viết tiếng Việt, trả lời tiếng Việt.
-            - Nếu khách viết tiếng Anh, trả lời tiếng Anh.
-            - Khi gợi ý sản phẩm, hãy nói tên sản phẩm, giá và slug.
-
-            Dữ liệu sản phẩm:
-            %s
-            """.formatted(productContext);
+        return String.format(
+                "You are Sneaker Store's product assistant.%n%n" +
+                        "Rules:%n" +
+                        "- Only advise based on the product data below.%n" +
+                        "- Do not invent products, prices, colors, or sizes.%n" +
+                        "- If no product matches, say that no matching product was found.%n" +
+                        "- If the customer asks about login or register, guide them to /login or /register.%n" +
+                        "- Reply in Vietnamese when the customer writes Vietnamese.%n" +
+                        "- Reply in English when the customer writes English.%n" +
+                        "- When recommending products, include the product name, price, and slug.%n%n" +
+                        "Product data:%n%s",
+                productContext
+        );
     }
 
     private String excelFallback(String userMessage) {
         String key = userMessage.trim().toLowerCase();
-        return excelData.getOrDefault(key, "Xin lỗi, mình chưa biết câu trả lời cho câu hỏi này.");
+        return excelData.getOrDefault(key, FALLBACK_ANSWER);
     }
 
     private void loadExcelData() {
         try (InputStream is = getClass().getClassLoader().getResourceAsStream("ChatSneaker.xlsx")) {
             if (is == null) {
-                log.warn("Không tìm thấy file Excel ChatSneaker.xlsx");
+                log.warn("Cannot find ChatSneaker.xlsx");
                 return;
             }
 
@@ -251,7 +282,11 @@ public class ChatServiceImpl implements ChatService {
             }
 
         } catch (IOException e) {
-            log.error("Lỗi đọc file Excel ChatSneaker.xlsx", e);
+            log.error("Cannot read ChatSneaker.xlsx", e);
         }
+    }
+
+    private static String sql(String... lines) {
+        return String.join(" ", lines);
     }
 }
